ingress/fixtures/input/ingress_and_service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: testing

spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /bar
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /foo
            backend:
              service:
                name: service1
                port:
                  number: 80
---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIP: 10.0.0.1
