ingress/fixtures/input/ingress_different_hosts_multiple_paths.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: testing
  annotations:
    ingress.kubernetes.io/frontend-entry-points: "web"
    ingress.kubernetes.io/priority: "10"
spec:
  rules:
  - host: traefik.hostx
    http:
      paths:
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 80
  - host: traefik.hosty
    http:
      paths:
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
