ingress/fixtures/input/ingress_extensions.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: testing
  annotations:
    ingress.kubernetes.io/frontend-entry-points: "web"
    ingress.kubernetes.io/priority: "10"
spec:
  rules:
  - host: traefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 80
