ingress/fixtures/input/ingress_redirect_approot.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: testing
  annotations:
    ingress.kubernetes.io/app-root: "index.html"
spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /
            backend:
              serviceName: service1
              servicePort: 80
    - host: traefik.tchouk
      http:
        paths:
            - path: /bar
              backend:
                serviceName: service1
                servicePort: 80
