ingress/fixtures/input/ingress_redirect_regex.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: test
  namespace: testing
  annotations:
    ingress.kubernetes.io/redirect-regex: "foo"
    ingress.kubernetes.io/redirect-replacement: "bar"
    ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /
            backend:
              serviceName: service1
              servicePort: 80
    - host: traefik.tchouk
      http:
        paths:
            - path: /bar
              backend:
                serviceName: service1
                servicePort: 80
