ingress/fixtures/input/ingress_rewrite_target.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  namespace: testing
spec:
  rules:
    - host: rewrite
      http:
        paths:
          - backend:
              serviceName: service1
              servicePort: 80
            path: /api
