ingress/fixtures/input/ingress_with_request_modifier.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: testing
  annotations:
    ingress.kubernetes.io/request-modifier: "AddPrefix: toto"
spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /bar
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /foo
            backend:
              service:
                name: service1
                port:
                  number: 80
