ingress/fixtures/input/ingress_with_service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test
  namespace: testing

spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /bar
            backend:
              serviceName: service1
              servicePort: http
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 80
