ingress/fixtures/input/ingress_with_whitelist_xforwarded.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-source-range: 1.1.1.1/24, 1234:abcd::42/32
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
  namespace: testing
spec:
  rules:
    - host: test
      http:
        paths:
          - backend:
              service:
                name: service1
                port:
                  number: 80
            path: /whitelist-source-range-x-forwarded
