ingress/fixtures/input/items_ingress.yml
apiVersion: v1
items:
  - apiVersion: extensions/v1beta1
    kind: Ingress
    metadata:
      annotations:
        ingress.kubernetes.io/auth-secret: basic-auth-document-db
        ingress.kubernetes.io/auth-type: basic
        ingress.kubernetes.io/custom-request-headers: XYZ-My-Custom-Header:dev
        kubernetes.io/ingress.class: traefik
      creationTimestamp: "2018-02-27T10:03:59Z"
      generation: 9
      name: dev-protected
      namespace: dev
      resourceVersion: "277178439"
      selfLink: /apis/extensions/v1beta1/namespaces/dev/ingresses/dev-protected
      uid: 87d8d657-1ba5-11e8-a9cd-06fa2d724cac
    spec:
      rules:
        - host: svc.test.migrate.traefik.to.v2.com
          http:
            paths:
              - backend:
                  serviceName: v2
                  servicePort: 80
