ingress/fixtures/input/service_only.yml
apiVersion: networking.k8s.io/v1
kind: Service
metadata:
  name: service1
  namespace: testing

spec:
  clusterIP: 10.0.0.1
  ports:
    - port: 80
