ingress/fixtures/input/ingress_with_errorpage.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/error-pages: |2

      foo:
        status:
        - "123"
        - "456"
        backend: bar
        query: /bar
      bar:
        status:
        - "404"
        - "501"
        backend: foo
        query: /foo
    kubernetes.io/ingress.class: traefik
  namespace: testing
spec:
  rules:
    - host: error-pages
      http:
        paths:
          - backend:
              service:
                name: service1
                port:
                  number: 80
            path: /errorpages
